--- a/estilo/style.css
+++ b/estilo/style.css
@@ -79,7 +79,7 @@ header {
 header > h1 {
     color: white;
     font-family: var(--fonte-destaque);
-    margin-bottom: 20px;
+    padding: 20px;
     font-size: 3em;
     text-shadow: 4px 8px 4px rgba(0, 0, 0, 0.39);
     
