--- a/estilo/style.css
+++ b/estilo/style.css
@@ -79,7 +79,7 @@ header {
 header > h1 {
     color: white;
     font-family: var(--fonte-destaque);
-    padding: 20px;
+    padding-bottom: 20px;
     font-size: 3em;
     text-shadow: 4px 8px 4px rgba(0, 0, 0, 0.39);
     
@@ -109,7 +109,7 @@ main {
     margin: auto;
     padding: 20px;
     margin-bottom: 30px;
-    min-width: 350px;
+    min-width: 300px;
     max-width: 1000px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.39);
     border-radius: 0px 0px 10px 10px;
